<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/gods_img"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
             />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.8"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/gods_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/goods_name_default2" />

            <TextView
                android:id="@+id/gods_price"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="2dp"
                android:text="@string/goods_price_default"
                android:textColor="@color/red" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="2dp"
                android:text="@string/sales_volume_tip" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.6"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/address"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="2dp"
                android:text="@string/shop_name_default2" />

            <TextView
                android:id="@+id/postage"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="2dp"
                android:text="@string/goods_postage_default"
                android:textColor="@color/red" />

            <TextView
                android:id="@+id/sales_volume"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="2dp"
                android:text="@string/goods_volume_default" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/bg_Black" />

</LinearLayout>