<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <!-- 显示不正常 再添加控件会出现错乱-->
   <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_theme"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/settings"
        android:textSize="22sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="18dp"
        android:background="@color/bg_Gray" />

    <RelativeLayout
        android:id="@+id/account_manage_menu"
        android:layout_width="fill_parent"
        android:layout_height="50dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="@string/account_management"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/user_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="5dp"
            android:src="@drawable/contact_head2" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@color/bg_Gray" />

    <RelativeLayout
        android:id="@+id/phone_number_menu"
        android:layout_width="fill_parent"
        android:layout_height="50dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="@string/phone"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/user_phoneNum"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:text="@string/mobile_num"
            android:textSize="18sp" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@color/bg_Gray" />

    <RelativeLayout
        android:id="@+id/gift_record_menu"
        android:layout_width="fill_parent"
        android:layout_height="50dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="@string/record"
            android:textSize="22sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="18dp"
        android:background="@color/bg_Gray" />

    <RelativeLayout
        android:id="@+id/safety_check_menu"
        android:layout_width="fill_parent"
        android:layout_height="50dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="@string/safety_check"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/safety_class"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:text="@string/safety_class"
            android:textSize="18sp" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@color/bg_Gray" />

    <TextView
        android:id="@+id/assistant_menu"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:gravity="center_vertical"
        android:text="@string/assistant"
        android:textSize="22sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@color/bg_Gray" />

    <TextView
        android:id="@+id/about_help_menu"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:gravity="center_vertical"
        android:text="@string/abuot"
        android:textSize="22sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@color/bg_Gray" />
  
</LinearLayout>