<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <include layout="@layout/detail_top_menu" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:layout_marginTop="45dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/goods_detail_img"
                android:layout_width="fill_parent"
                android:layout_height="270dp"
                android:layout_gravity="center_horizontal"
                 />

            <View
                android:layout_width="fill_parent"
                android:layout_height="3dp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/goods_datail_name"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:text="@string/goods_name_default"
                    android:textSize="18sp" />

                <View
                    android:layout_width="10dp"
                    android:layout_height="fill_parent" />

                <TextView
                    android:id="@+id/goods_datail_class"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/goods_class_default"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/shop_name_tip"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/shop_datail_name"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/shop_name_default"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:text="@string/address_tip"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/shop_datail_address"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center_vertical"
                    android:text="@string/shop_address_default"
                    android:textSize="18sp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="5dp" />

            <TextView
                android:id="@+id/goods_detail_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:text="@string/goods_price_default"
                android:textColor="@color/red"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/goods_detail_postage"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/goods_postage_default"
                    android:textColor="@color/gray"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:gravity="right|center_vertical"
                    android:text="@string/sales_volume_tip"
                    android:textColor="@color/gray"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/goods_detail_volume"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:gravity="left|center_vertical"
                    android:text="@string/goods_volume_default"
                    android:textColor="@color/gray"
                    android:textSize="20sp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/bg_Black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/evaluation_title"
                android:textSize="20sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp" />

            <com.hys.song.view.HughsListView
                android:id="@+id/evaluations"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

    <include layout="@layout/detail_bottom_menu" />

</RelativeLayout>