<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_theme"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/search_back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:background="@color/app_theme"
            android:src="@drawable/bt_back" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <EditText
                android:id="@+id/search_input"
                android:layout_width="fill_parent"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:background="@drawable/search_view"
                android:drawableLeft="@drawable/edit_search"
                android:drawablePadding="5dp"
                android:hint="@string/search_input_hint"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/delete_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="20dp"
                android:src="@drawable/sarch_delete"
                android:visibility="gone" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/history"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/search_history" />

        <ListView
            android:id="@+id/search_history"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/bg_Gray" />

        <Button
            android:id="@+id/delete_history"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@color/bg_White"
            android:gravity="center"
            android:text="@string/delete_history"
            android:textSize="15sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/search_result"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</LinearLayout>